--- a/src/content/notes/rebuilding.mdx
+++ b/src/content/notes/rebuilding.mdx
@@ -1,5 +1,5 @@
 ---
-title: Rebuilding a childhood toy to cure my burnout.
+title: Curing burnout by rebuilding a childhood toy.
 publishedAt: 2024-06-30
 cover: /notes/toy.png
 isPreview: true
