--- a/src/content/project/1.mdx
+++ b/src/content/project/1.mdx
@@ -1,5 +1,5 @@
 ---
-title: khayaOS
+title: BuilderOS
 tech: [/techstack/astro.svg, /techstack/spotify.svg, /techstack/typescript.svg]
 cover: /projects/os.png
 ---
@@ -14,9 +14,9 @@ Astro, Typescript, Spotify API
 
 **Description 📖**
 
-Khaya, meaning “Home” in Zulu (which is why I kept the name KhayaOS). Is an astro plugin/template, built using their integrations API and WAAPI.
+An astro plugin/template, built using their integrations API and WAAPI.
 
-I’ve always been working on my personal website, but I’ve also always had the idea, to build something, that developers without time or even the skills (yet), could spin up for themselves
+I've periodically updated my personal website, and with each update my intention was to build something someone else could use. Which is where the idea of a "BuilderOS" came from.
 
 I previously used KeystoneJS, but switched to using Astro’s content collection builtin as an alternative to the headless CMS. Having to set up NodeJS, postgres for a python developer or first uni grad, was to much.
 
