--- a/src/content/project/2.mdx
+++ b/src/content/project/2.mdx
@@ -4,9 +4,19 @@ tech: [/techstack/typescript.svg, /techstack/astro.svg]
 cover: /projects/changesaw.png
 ---
 
+**Site 🔗**
+
+[https://changesaw.upshot.dev](https://changesaw.upshot.dev)
+
+**Tech 💻**
+
+Astro
+
+**Description 📖**
+
 A changelog makes the perfect candidate for a static site generator. Which I was try to build when exploring Astro’s integration’s API. Changesaw is an Astro plugin that turns your content collections into Changelogs.
 
-**Future work**
+**Future work 🕥**
 
 Inspired by Starlight & Docusaurus. This project is still a work in progress (which is a recurring theme at this point). I guess what I really want to try out is a GitHub action for open source repo’s. Using an OpenAI key to auto generate logs from releases.
 
