--- a/src/content/project/4.mdx
+++ b/src/content/project/4.mdx
@@ -10,9 +10,19 @@ tech:
 cover: /projects/flushed.png
 ---
 
+**Site 🔗**
+
+[https://www.flushed.dev/](https://www.flushed.dev/)
+
+**Tech 💻**
+
+NextJS, ViteJS, Supabase, Snaplet
+
+**Description 📖**
+
 A changelog makes the perfect candidate for a static site generator. Which I was try to build when exploring Astro’s integration’s API. Changesaw is an Astro plugin that turns your content collections into Changelogs.
 
-**Future work**
+**Future work 🕥**
 
 Inspired by Starlight & Docusaurus. This project is still a work in progress (which is a recurring theme at this point). I guess what I really want to try out is a GitHub action for open source repo’s. Using an OpenAI key to auto generate logs from releases.
 
