update personal website

--- a/src/content/project/0.mdx
+++ b/src/content/project/0.mdx
@@ -4,10 +4,11 @@ tech: [/techstack/typescript.svg, /techstack/golang.svg]
 cover: /projects/building.png
 ---
 
-I build where work and my personal interests lead me. At the moment working heavily with, Typescript & React, and pretty much anything around that ecosystem.
+I try and learn through over-engineered side projects. At the moment learning Golang, but understanding how databases work.
 
-I recently got gifted a smart watch, so keen to dive into native app development and building mobile apps again with expo.
+My stack is Typescript, React and anything else that peaks my interest.
 
-And just started working on a tool written in Go.
+Using figma a lot lately and exploring how I can tell my stories building through video
 
-Check out my [bookmarks](https://www.flushed.dev/u/khaya_was_taken) or [github.](https://github.com/khaya-zulu)
+- ● [Professional (Introducing Snaplet Seed)](https://www.youtube.com/watch?v=TiJyya6t_Rg&t=6s)
+- ● [Personal (My personal website for 2024)](https://youtu.be/UoSqz3YN76s)
