--- a/src/content/project/2.mdx
+++ b/src/content/project/2.mdx
@@ -14,10 +14,11 @@ Astro
 
 **Description 📖**
 
-A changelog makes the perfect candidate for a static site generator. Which I was try to build when exploring Astro’s integration’s API. Changesaw is an Astro plugin that turns your content collections into Changelogs.
+A static site generator for a changelog. Exploring the Astro Integration API. Changesaw turns your Astro content collections into a changelog.
 
 **Future work 🕥**
 
-Inspired by Starlight & Docusaurus. This project is still a work in progress (which is a recurring theme at this point). I guess what I really want to try out is a GitHub action for open source repo’s. Using an OpenAI key to auto generate logs from releases.
+Inspired by Starlight & Docusaurus.
 
-Astro also just released a theme for a Changelog, called [Starlog](https://astro.build/themes/details/starlog/). So don't use Changesaw, Starlog offers a lot more customization and generally cleaner visually.
+- ● Add a github action for generating changelogs
+- ● LLM generated logs from prs
