--- a/src/content/project/1.mdx
+++ b/src/content/project/1.mdx
@@ -16,12 +16,8 @@ Astro, Typescript, Spotify API
 
 An astro plugin/template, built using their integrations API and WAAPI.
 
-I've periodically updated my personal website, and with each update my intention was to build something someone else could use. Which is where the idea of a "BuilderOS" came from.
-
-I previously used KeystoneJS, but switched to using Astro’s content collection builtin as an alternative to the headless CMS. Having to set up NodeJS, postgres for a python developer or first uni grad, was to much.
+Every year I update my personal website, almost a recap of the year.
 
 **Future work 🕥**
 
-I’m excited for Astro Studio, hopefully being a solution for managing collections (my guess, could be wrong). I would also like to give Keystatic a go (specifically with the github mode).
-
-This project basically started in 2019 (yearly design changes 😄), because I wanted something I could over-engineer. I’m keen on adding something like Pocketbase or Supabase to power an editor mode. Or a service like Upstash for storing “Spotify last played” or “View of notes”.
+Build a studio. Add AstroDB, I would also like to Keystatic a try, specifically because it has a github mode as a way to manage my collections.
