--- a/src/content/project/4.mdx
+++ b/src/content/project/4.mdx
@@ -20,10 +20,4 @@ NextJS, ViteJS, Supabase, Snaplet
 
 **Description 📖**
 
-A changelog makes the perfect candidate for a static site generator. Which I was try to build when exploring Astro’s integration’s API. Changesaw is an Astro plugin that turns your content collections into Changelogs.
-
-**Future work 🕥**
-
-Inspired by Starlight & Docusaurus. This project is still a work in progress (which is a recurring theme at this point). I guess what I really want to try out is a GitHub action for open source repo’s. Using an OpenAI key to auto generate logs from releases.
-
-Astro also just released a theme for a Changelog, called [Starlog](https://astro.build/themes/details/starlog/). So don't use Changesaw, Starlog offers a lot more customization and generally cleaner visually.
+As part of the Snaplet + Supabase integration, I explored setting something up in a weekend to help me track my bookmarks
