--- a/src/content/notes/rebuilding.mdx
+++ b/src/content/notes/rebuilding.mdx
@@ -1,12 +1,108 @@
 ---
-title: Curing burnout by rebuilding a childhood toy.
+title: "kayaGPT: Notes from building an AI application"
 publishedAt: 2024-06-30
 cover: /notes/toy.png
-isPreview: true
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.
+I’m in the middle of a great read: [AI engineering by Chip Huyen](https://www.amazon.com/AI-Engineering-Building-Applications-Foundation/dp/1098166302). It's consumed most of free time after work 😅. At the time time I've been reflecting on where 5 years of frontend experience could be used to good use.
 
-Sodales neque sodales ut etiam sit amet nisl. Mauris a diam maecenas sed enim ut sem. Turpis tincidunt id aliquet risus feugiat in ante. Amet aliquam id diam maecenas ultricies mi eget mauris pharetra. Facilisis leo vel fringilla est ullamcorper. Eu feugiat pretium nibh ipsum consequat nisl vel.
+![Introducing ChatGPT Blog post](/notes/kayagpt/introducing-chatgpt.png)
 
-Enim eu turpis egestas pretium aenean pharetra magna ac. Imperdiet proin fermentum leo vel. Sapien nec sagittis aliquam malesuada bibendum arcu vitae. Tellus elementum sagittis vitae et leo duis ut diam. Lacus laoreet non curabitur gravida arcu ac. Nibh praesent tristique magna sit amet. Eu turpis egestas pretium aenean pharetra magna ac.
+One the consequences of this now [3 year](https://openai.com/index/chatgpt/?utm_source=chatgpt.com) GenAI craze, is how problems once reserved for ML researchers and engineers have now crossed over to a broader community of software developers. Questions around UX, security, and developer tooling are just as important as model performance.
+
+---
+
+My point is, we're living through an extraordinary technology shift that everyone will play a role in help shaping. With some domain knowledge and a bit of creativity, you can meaningfully contribute.
+
+This blog post focuses on the user-application layer and the journey I took in building my own personal ChatGPT interface ([kayaGPT](https://kayagpt.com/)). It’s my first official step towards becoming an AI engineer and is an opportunity to explore the AI product development aspect.
+
+#### UX for AI applications
+
+There’s an amazing talk by [Allen Pike](https://allenpike.com/2025/post-chat-llm-ui), _titled: [AI UX Design](https://www.youtube.com/watch?v=mRqBjKFyfLc)_, that sparked the idea for kayaGPT. That, and a season of black mirror 😂. I wanted to build the perfect version of ChatGPT for myself.
+
+> You can already see this trend, as the usage of AI chat interface usage grows. [T3Chat](https://t3.chat/) _(developer-minded ChatGPT)_, [Dia](https://www.diabrowser.com/) _(product-minded ChatGPT)_ and [Scira AI](https://scira.ai/) _(open-source ChatGPT)_.
+
+Anyways… the talk covers some interesting surrounding **AI UX.** It includes examples and questions I kept running into when I first started building:
+
+- **“Can my five-step onboarding flow just be five-step conversation?”**
+- **“Can form inputs, like uploading a Github link or profile picture, become tool calls instead?”**
+- **“Does this page even need to exist?”**
+
+<img
+  src="/notes/kayagpt/onboarding-chat.png"
+  alt="Introducing ChatGPT Blog post"
+  style="width: 80%"
+/>
+
+It became clear to me that the future may be cluttered with less AI and I had to be intentional in the way designed features and organized my code.
+
+---
+
+Another resource that was very helpful came from Apple 🍎. They have two design guides on [ML](https://developer.apple.com/design/human-interface-guidelines/machine-learning) and [Generative AI](https://developer.apple.com/design/human-interface-guidelines/generative-ai) that are full gems 💎.
+
+One very obvious idea taken from the ML guide, was the idea of _proactive vs reactive systems_. ChatGPT is reactive by nature. A user types, it responds and occasionally makes use of tools. With kayaGPT I have the opportunity to push towards an event-driven architecture. Give me a system that is **multi-step**, that I can **run over days** or weeks and that checks up on me 😅
+
+![Proactive vs Reactive from Apple Blog](/notes/kayagpt/proactive-vs-reactive.png)
+
+Honestly, this could be a whole blog post on its own. AI UX is still early, especially examples used in production, so many questions are still unanswered. But that’s what makes it exciting. There’s so much room to invent.
+
+> I think about this [tweet](https://x.com/patrickc/status/1928509708190757294) by Stripe founder, Patrick Collison, when explaining opportunities above
+
+#### The Stack
+
+I learn by [building](https://upshot.dev/projects), and this project gave me the perfect opportunity to that. Here's the stack I landed on:
+
+- [HonoJS](https://hono.dev/), hosted on Cloudflare ⛅️
+- React Native with [Expo](https://expo.dev/) 📱
+- [Tanstack Query](https://tanstack.com/query/latest) & [Tanstack Form](https://tanstack.com/form/latest)
+- [Vercel AI SDK](https://ai-sdk.dev/docs/introduction) 📐
+- [Turborepo](https://turborepo.com/) for a monorepo setup
+
+#### React Native
+
+I recently jumped back into the React Native ecosystem for work (After 2 years ✌️). Because of Expo it's been very smooth to get back into. The ecosystem has matured a lot: better native tooling, clearer error messages and in my case almost perfect web support (web-peformance still needs catch up).
+
+There are a number features I plan to build over time into the project, which Expo & React Native have packages for:
+
+- [Local models](https://docs.swmansion.com/react-native-executorch/): probably the most exciting because they unlock so many previously impossible use cases.
+- [Voice interfaces & WebRTC](https://github.com/react-native-webrtc/react-native-webrtc): beyond text. Before the end of the year onboarding will be fully voice-driven (if time allows of course 🤞😅)
+- 3d with WebGL, Local first state management, Apple targets, the list goes on.
+
+Ultimately the experience I want for this project is a personal website I can update anywhere (Not just my laptop). With Expo Router, your apps are essentially universal and the EAS services makes deployments painless.
+
+> I’m very optimistic about the future of React native (Officially React-Native pulled 💊). Watch this talk _[React Native 2030](https://www.youtube.com/watch?v=dKItY_2wFH0&t=274s)_ by Fernando Rojo.
+
+#### Hono & Cloudflare
+
+What makes building with foundation models so exciting is that if feels like play. Using Cloudflare workers with frameworks like [Hono](https://hono.dev/) and the [Redwood SDK](https://rwsdk.com/), brings that magic (It’s literally the [philosophy behind rwsdk](https://rwsdk.com/personal-software)).
+
+To add Cloudflare's ecosystem of services covers almost every layer of the modern AI stack. The only thing missing is a graph database (I kid) 😅.
+
+Here are some highlights I took from building this POC:
+
+- [Bindings](https://developers.cloudflare.com/workers/runtime-apis/bindings/) are incredible, they make it effortless for your worker to interact with other Cloudflare resources. I’m using [D1](https://developers.cloudflare.com/d1/) as **my database 💿**, [R2](https://developers.cloudflare.com/r2/) for **image storage 📸** and [Workers AI](https://developers.cloudflare.com/workers-ai/) 🪄 to do things like comment on the weather. In the future, the backend for this project will essentially be a full-stack cloudflare template ✨.
+
+![Weather commentry](/notes/kayagpt/weather-comment.png)
+
+- The **workers runtime** runs on [V8 isolate](https://developers.cloudflare.com/workers/reference/how-workers-works/#isolates). Honestly any [blog post](https://blog.cloudflare.com/eliminating-cold-starts-with-cloudflare-workers/) or [video](https://www.youtube.com/watch?v=C5-741uQPVU) explaining this technology, is worth the spare time.
+- Other services include [AutoRAG](https://developers.cloudflare.com/autorag/), [vectorize](https://developers.cloudflare.com/vectorize/) and I can imagine using durable objects for building stateful agents ([Agents SDK](https://developers.cloudflare.com/agents/)).
+
+Of course, lock-in is always a concern, but the portable nature of Hono and the clarity of its API makes migrations fairly simple.
+
+> (For context: I recently migrated an AWS serverless project to Cloudflare Workers. It took me half a day.)
+
+If you think back to the UX section, latency, streaming, model availability, storage and web sockets, are all backend details that play a huge role in delivering an amazing user experience.
+
+Right now, Cloudflare offers the best developer experience for all of this.
+
+#### The future 🪨
+
+My plan is to continue making improvements to the platform through PRs as I study the AI engineering topic further, whether that’s:
+
+- **UX changes:** making onboarding fully voice-driven.
+- **Client-side improvements:** using [LiveStore's expo adapter](https://expo.dev/blog/local-first-application-development-with-livestore) to bring offline capability or exploring local models with _React Native Executorch._
+- **Architecture upgrades:** introducing more event-driven interactions with the [Cloudflare Workflows](https://developers.cloudflare.com/workflows/) service.
+
+Finally I encourage you start building something for yourself. I think we will get to a point where parameter size, context windows, and benchmark scores won’t matter as much. As these topics become more accessible, the challenges will be left to the user-application layer (keep that in mind).
+
+> There’s a great [talk](https://www.youtube.com/watch?v=2eWuYf-aZE4) by the CTO of Spotify that touches on this shift.
