--- a/src/content/project/1.mdx
+++ b/src/content/project/1.mdx
@@ -16,8 +16,8 @@ Astro, Typescript, Spotify API
 
 An astro plugin/template, built using their integrations API and WAAPI.
 
-Every year I update my personal website, almost a recap of the year.
+Every year I update my personal website, almost a recap of my progress over a period of time.
 
 **Future work 🕥**
 
-Build a studio. Add AstroDB, I would also like to Keystatic a try, specifically because it has a github mode as a way to manage my collections.
+Build a studio (Github Sync support). Add AstroDB, I would also like to give Keystatic a try, with the github mode specifically for managing collections.
