--- a/src/content/project/2.mdx
+++ b/src/content/project/2.mdx
@@ -20,5 +20,5 @@ A static site generator for a changelog. Exploring the Astro Integration API. Ch
 
 Inspired by Starlight & Docusaurus.
 
-- ● Add a github action for generating changelogs
-- ● LLM generated logs from prs
+- Add a github action for generating changelogs
+- Github action that generates a changelog from prs
