--- a/src/content/project/4.mdx
+++ b/src/content/project/4.mdx
@@ -1,12 +1,6 @@
 ---
-title: Flushed
-tech:
-  [
-    /techstack/nextjs.png,
-    /techstack/vitejs.svg,
-    /techstack/supabase.svg,
-    /techstack/snaplet.svg,
-  ]
+title: Starlink Expo Live Activity
+tech: []
 cover: /projects/flushed.png
 ---
 
@@ -16,8 +10,9 @@ cover: /projects/flushed.png
 
 **Tech 💻**
 
-NextJS, ViteJS, Supabase, Snaplet
+React Native, Expo Apple Targets
 
 **Description 📖**
 
-As part of the Snaplet + Supabase integration, I explored setting something up in a weekend to help me track my bookmarks
+Tweet: https://x.com/khaya_was_taken/status/1880980221815648707
+Code: https://github.com/khaya-zulu/starlink
