--- a/src/content/project/3.mdx
+++ b/src/content/project/3.mdx
@@ -19,3 +19,5 @@ Motion is an animationed library powered by WAAPI. I was asked to be a co-author
 **Future work 🕥**
 
 We have plans to build a whole toolkit (Figma plugin, Browser dev tool). I guess finding time to get back into it again. I would like to export a gsap like api for vanilla html. Offer more than what WAPPI gives (i.e. springs).
+
+Plans to build a whole toolkit (Figma plugin, Browser dev tool). I guess finding time to get back into it again. Create a vanilla html export of the gsap like api. Offer more than what WAPPI gives (i.e. springs).
