--- a/src/content/project/0.mdx
+++ b/src/content/project/0.mdx
@@ -4,11 +4,11 @@ tech: [/techstack/typescript.svg, /techstack/golang.svg]
 cover: /projects/building.png
 ---
 
-I try and learn through over-engineered side projects. At the moment learning Golang, but understanding how databases work.
+I love learning trough my (sometimes over-engineered) side-quests. Right now, I’m diving into Golang and deepening my understanding of how databases work.
 
-My stack is Typescript, React and anything else that peaks my interest.
+My main stack is TypeScript and React, but I’m always experimenting with whatever catches my interest.
 
-Using figma a lot lately and exploring how I can tell my stories building through video
+Lately, I’ve been using Figma a lot and exploring how to tell my dev stories through video.
 
 - ● [Professional (Introducing Snaplet Seed)](https://www.youtube.com/watch?v=TiJyya6t_Rg&t=6s)
 - ● [Personal (My personal website for 2024)](https://youtu.be/UoSqz3YN76s)
