--- a/src/content/project/0.mdx
+++ b/src/content/project/0.mdx
@@ -10,5 +10,5 @@ My main stack is TypeScript and React, but I’m always experimenting with whate
 
 Lately, I’ve been using Figma a lot and exploring how to tell my dev stories through video.
 
-- ● [Professional (Introducing Snaplet Seed)](https://www.youtube.com/watch?v=TiJyya6t_Rg&t=6s)
-- ● [Personal (My personal website for 2024)](https://youtu.be/UoSqz3YN76s)
+- [Professional (Introducing Snaplet Seed)](https://www.youtube.com/watch?v=TiJyya6t_Rg&t=6s)
+- [Personal (My personal website for 2024)](https://youtu.be/UoSqz3YN76s)
