--- a/src/content/notes/kayagpt.mdx
+++ b/src/content/notes/kayagpt.mdx
@@ -195,6 +195,8 @@ Finally I encourage you start now: **build something for yourself**. Foundation 
 
 **It's important to remember**: we're still early and that the opporunity lies in the domain knowledge and creativity you can bring to the table.
 
-> - [Explained: The conspiracy to make AI seem harder than it is!](https://www.youtube.com/watch?v=2eWuYf-aZE4)
+> - Talk: [Explained: The conspiracy to make AI seem harder than it is!](https://www.youtube.com/watch?v=2eWuYf-aZE4)
+> - Podcast: [From Software Engineer to AI Engineer – with Janvi Kalra](https://www.youtube.com/watch?v=3E_jDJST69s&t=2908s)
+> - Podcast: [AI Engineering with Chip Huyen](https://www.youtube.com/watch?v=98o_L3jlixw)
 
 ~ Peace ✌️
