update cover path

--- a/src/content/notes/kayagpt.mdx
+++ b/src/content/notes/kayagpt.mdx
@@ -4,7 +4,7 @@ publishedAt: 2025-06-22
 cover: /notes/kayagpt/cover.png
 ---
 
-![kayaGPT](/public/notes/kayagpt/cover.png)
+![kayaGPT](/notes/kayagpt/cover.png)
 
 **For the past few weeks, I've been building a personal chatbot**. It's an exploration into AI app development and different patterns. From the UX challenges to server-client tooling to backend architecture choices. This blog post documents parts of that journey, with code snippets and links to resources I found useful throughout the process.
 
